AlgoProg/Semestre2/MemoryJava/.svn/pristine/33/335bee849c1f03c164eb4429ceba93afeabe5678.svn-base
Memory.java:37: error: cannot find symbol
			leChef.inscrire(new JoueurReel(joueurDescription[0], joueurDescription[1]));
			                    ^
  symbol:   class JoueurReel
  location: class Memory
1 error
